fixed overflowing images & text at work template

--- a/assets/styles/resource.css
+++ b/assets/styles/resource.css
@@ -1,5 +1,5 @@
 .page__header-draggable-title .page__header-gripper-label {
-  max-width: 80vw !important;
+  max-width: 45.5vw !important;
   font-size: x-large !important;
 }
 
@@ -43,4 +43,13 @@
   .workAndProductionInfo .workInfoContainer {
     width: 100% !important;
   }
+}
+
+
+@media(max-width:1200px){
+  .page__header-draggable-title .page__header-gripper-label {
+    max-width: 90vw !important;
+    text-overflow: pre-wrap !important;
+  }
+  
 }
